--- a/view/addForm.html
+++ b/view/addForm.html
@@ -1,7 +1,7 @@
-<form>
+<form method="POST" target="">
     <label>Project Name</label>
-    <input type="text" required>
+    <input type="text" name="projectName" required>
     <label>Project Path</label>
-    <input type="text" placeholder="Example: C:\xampp\htdocs\index.php" required>
+    <input type="text" name="projectPath"  placeholder="Example: C:\xampp\htdocs\index.php" required>
     <button type="submit">Add Project</button>
 </form>
