--- a/view/addForm.html
+++ b/view/addForm.html
@@ -1,4 +1,4 @@
-<form method="POST" target="">
+<form method="POST" target="index.php?action=addProject">
     <label>Project Name</label>
     <input type="text" name="projectName" required>
     <label>Project Path</label>
