--- a/view/addForm.html
+++ b/view/addForm.html
@@ -1,7 +1,7 @@
-<form method="POST" target="index.php?action=addProject">
+<form method="post" action="index.php?action=addProject">
     <label>Project Name</label>
     <input type="text" name="projectName" required>
     <label>Project Path</label>
-    <input type="text" name="projectPath"  placeholder="Example: C:\xampp\htdocs\index.php" required>
+    <input type="text" name="projectPath" placeholder="Example: C:\xampp\htdocs\index.php" required>
     <button type="submit">Add Project</button>
 </form>
